Scroll correct element
The element we want scrolling around is noVNC_screen, not the entire
window. This also allows us to compute the screen size without
fiddling the scrollbars on and off.

--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -798,6 +798,7 @@ input[type=button]:active, select:active {
   display: flex;
   width: 100%;
   height: 100%;
+  overflow: auto;
   background-color: rgb(40, 40, 40);
 }
 :root:not(.noVNC_connected) #noVNC_screen {
